# churn-prediction-ecommerce

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  OLIST - must have.md  README.md  dataset.md  docker-compose.yml  project.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
config/: __init__.py  settings.py
dashboard/: index.html  template.html
docs/: INFERENCE_GUIDE.md  dataset.md  glossary.md  poc.md  project.md
notebooks/: poc_churn_analysis.ipynb
outputs/: analysis_summary.txt  churn_insights_report.md  cohort_analysis.csv  intervention_priorities.txt  intervention_priority_list.csv  model_evaluation.md  segment_analysis_business_segment.csv  segment_analysis_lead_behaviour_profile.csv  segment_analysis_lead_type.csv  segment_analysis_seller_state.csv
scripts/: generate_dashboard.py  run_inference.py  run_pipeline.py
src/: __init__.py  evaluation.py  features.py  models.py  pipeline.py  reports.py
src/validation/: schemas.py
tests/: test_models.py  test_pipeline.py  test_reports.py
