[project]
name = "olist-churn-prediction"
version = "0.1.0"
description = "Seller churn prediction model for the Olist e-commerce platform"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    # Core data processing
    "pandas>=2.0.3",
    "numpy>=1.24.3",
    # Machine learning
    "scikit-learn>=1.3.0",
    # Data validation
    "pandera>=0.17.2",
    "multimethod>=1.10",
    # Configuration management
    "pydantic>=2.0.3",
    "pydantic-settings>=2.0.3",
    # Environment variables
    "python-dotenv>=1.0.0",
    # Model persistence
    "joblib>=1.3.1",
    # Visualization
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    # Experiment tracking
    "mlflow>=2.13.0",
]

# ── Black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

# ── isort ─────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src"]
skip_glob = ["*/.venv/*", "*/build/*"]

# ── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true
exclude = ["tests/", "scripts/", "notebooks/"]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
log_cli = true
log_cli_level = "INFO"

# ── bandit ────────────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", "scripts", "notebooks"]
skips = ["B101"]  # Allow assert statements (used in tests/validation)

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "black>=23.7.0",
    "flake8-bugbear>=25.11.29",
    "flake8-comprehensions>=3.17.0",
    "isort>=8.0.0",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.260113",
    "pre-commit>=4.5.1",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "types-pyyaml>=6.0.12.20250915",
]
